--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="row" id="row">
       <div class="col-5">
         <div class="bettyGif">
-          <img id="giffBetty" src="img/betty.gif" alt="La mas hermosa">
+          <img id="giffBetty" src="img/Betty.gif" alt="La mas hermosa">
         </div>
       </div>
       <div class="col-5 message">
